[package]
name = "cgt"
description = "Curated GPU Tests"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mripard/cgt"
keywords = ["linux", "graphics", "testing"]
categories = ["development-tools::testing", "graphics"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "cgt-core",
    "cgt-macros",
]

[dependencies]
automod = "1.0.12"
cgt-core = { path = "cgt-core" }
cgt-macros = { path = "cgt-macros" }
inventory = "0.3.12"
