[package]
name = "cgt-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drm-helpers = { path = "../drm-helpers" }
drm-uapi = { path = "../drm-uapi" }
glob = "0.3.1"
inventory = "0.3.12"
nix = "0.27.1"
thiserror = "1.0.49"
