[package]
name = "cgt-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
attribute-derive = "0.8.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }

[dev-dependencies]
cgt-core = { path = "../cgt-core" }
